--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,19 @@
       <%= link_to root_path, class: 'logo' do %>
       <div class="circle">
         <br />
-        A
+        FEED
         <br />
-        Little
+        ME
         <br />
-        Love
+        QUOTES
       </div>
       <% end %>
     </div>
- <div class="col-sm-4 hidden-xs slogan">        Blurty, a place to gather over the times in our life that mean the most. Share as little or as much as you want about a life-changing event and help remind the world that we are all human.
+ <div class="col-sm-4 hidden-xs slogan">        Blurty. Enter quotes by clicking the "Add Quote" link, and I'll spit one of them out randomly whenever the page is refreshed or you click the "Next Quote!" link in the bottom left
 
     </div>
     <div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-sm-5 links">      <!-- Button trigger modal -->
-      <%= link_to 'Share', '#', data: {toggle: 'modal', target: '#myModal'} %>
+      <%= link_to 'Add Quote', '#', data: {toggle: 'modal', target: '#myModal'} %>
         &nbsp;&nbsp;
       <%= link_to 'About', about_path %>
     </div>
@@ -38,20 +38,20 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" id="myModalLabel">Share your story</h4>
+          <h4 class="modal-title" id="myModalLabel">Enter your quote!</h4>
         </div>
        
           
          <%= simple_form_for Quote.new do |f| %>
           <div class="modal-body" >
-           <%= f.input :saying, :size=>'50', label: "Share your story", placeholder: 'Write your story here'%>
+           <%= f.input :saying, :size=>'50', label: "Enter quote here", placeholder: 'Quote'%>
 
             <br />
-           <%= f.input :author, label: "Tell us your name", placeholder: 'Write your name and location, if you wish'%>
+           <%= f.input :author, label: "Enter the name of the person who said the quote here", placeholder: 'Name of person who said quote'%>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <%= f.submit 'Add Story', class: 'btn btn-danger' %>
+            <%= f.submit 'Add Quote!', class: 'btn btn-danger' %>
           </div>
         <% end %>
 
@@ -75,7 +75,7 @@
 <div class="footer">
   <div class="container">
     <div class="col-xs-6">
-      <%=link_to "I'd like to hear another", root_path, class: 'next-quote'%>
+      <%=link_to "Next Quote!", root_path, class: 'next-quote'%>
       
     </div>
       <div class="col-xs-12 col-sm-6 footer-blurb">    Started by Mason Lantay of Carrboro, North Carolina<br />
