changed to regular quote generator

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       </div>
       <% end %>
     </div>
- <div class="col-sm-4 hidden-xs slogan">        Blurty. Enter quotes by clicking the "Add Quote" link, and I'll spit one of them out randomly whenever the page is refreshed or you click the "Next Quote!" link in the bottom left
+ <div class="col-sm-4 hidden-xs slogan">        Blurty. Enter quotes by clicking the "Add" link, and I'll spit one of them out randomly whenever the page is refreshed or you click the "Next Quote!" link in the bottom left
 
     </div>
     <div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-sm-5 links">      <!-- Button trigger modal -->
