--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -1,7 +1,7 @@
-<div class="col-xs-10 col-xs-offset-1">
+<div class="col-xs-10 col-xs-offset-1 about">
   <h1>About</h1>
 
   <p>
-I build Blurty in order to improve my own skills at programming. This project taught me how to store and retrieve information in databases and is the first Ruby on Rails application I ever built. I hope you enjoy! Let me know if you know of any clever uses you would like to use the app for :)
+I built Blurty in order to improve my own skills at programming. This project taught me how to store and retrieve information in databases and is the first Ruby on Rails application I ever built. I hope you enjoy! Let me know if you know of any clever uses you would like to use the app for :)
   </p>
 </div>
